--- a/index.html
+++ b/index.html
@@ -33,65 +33,65 @@
       <!-- Timeblocks go here -->
 
       <!--9am block-->
-      <div class="row time-block" data-hour="9">
+      <div class="row time-block">
         <div class="col-md-1 hour">9AM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="9"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--10am block-->
-      <div class="row time-block" data-hour="10">
+      <div class="row time-block">
         <div class="col-md-1 hour">10AM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="10"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--11am block-->
-      <div class="row time-block" data-hour="11">
+      <div class="row time-block">
         <div class="col-md-1 hour">11AM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="11"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--12pm block-->
-      <div class="row time-block" data-hour="12">
+      <div class="row time-block">
         <div class="col-md-1 hour">12PM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="12"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--1pm block-->
-      <div class="row time-block" data-hour="13">
+      <div class="row time-block">
         <div class="col-md-1 hour">1PM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="13"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--2pm block-->
-      <div class="row time-block" data-hour="14">
+      <div class="row time-block">
         <div class="col-md-1 hour">2PM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="14"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--3pm block-->
-      <div class="row time-block" data-hour="15">
+      <div class="row time-block">
         <div class="col-md-1 hour">3PM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="15"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--4pm block-->
-      <div class="row time-block" data-hour="16">
+      <div class="row time-block">
         <div class="col-md-1 hour">4PM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="16"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
 
       <!--5pm block-->
-      <div class="row time-block" data-hour="17">
+      <div class="row time-block">
         <div class="col-md-1 hour">5PM</div>
-        <div class="col-md-10 past"></div>
+        <div class="col-md-10 past" data-hour="17"></div>
         <button class="col-md-1 saveBtn"><img src="./images/save-logo.jpg"/></button>
       </div>
     </div>
